[gd_scene load_steps=4 format=3 uid="uid://by7dadnhbwbdd"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_jdadn"]
[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/VT323-Regular.ttf" id="2_sagwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxb4r"]
bg_color = Color(0.717647, 0.141176, 0.117647, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jdadn")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_sagwj")
theme_override_font_sizes/font_size = 42
text = "Lives : 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lxb4r")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -17.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "YOU LOST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
